# docs/swagger.json
@@ -25,19 +25,9 @@
         }
       }
     },
-    "/transact/obtain_records/pending/{last}": {
+    "/transact/obtain_records/pending_last": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "last",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -56,19 +46,9 @@
         ]
       }
     },
-    "/transact/obtain_records/processed/{last}": {
+    "/transact/obtain_records/processed_last": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "last",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -87,27 +67,9 @@
         ]
       }
     },
-    "/transact/obtain_records/status/{status}/{last}": {
+    "/transact/obtain_record/processed_all": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "status",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "last",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -126,7 +88,28 @@
         ]
       }
     },
-    "/transact/record/{t_id}": {
+    "/transact/obtain_record/pending_all": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/transact/obtain_record/{t_id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -167,6 +150,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -203,9 +189,6 @@
                   "transaction_date": {
                     "example": "any"
                   },
-                  "reference_number": {
-                    "example": "any"
-                  },
                   "amount": {
                     "example": "any"
                   },
@@ -219,14 +202,180 @@
         }
       }
     },
-    "/transact/remove_record/{reference_number}": {
+    "/transact/remove_record/{t_id}": {
       "delete": {
         "description": "",
         "parameters": [
           {
-            "name": "reference_number",
+            "name": "t_id",
             "in": "path",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/transact/updateTransactionStatus": {
+      "put": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "t_id": {
+                    "example": "any"
+                  },
+                  "status": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/transact/batchUpdateTransactionStatus": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "t_ids": {
+                    "example": "any"
+                  },
+                  "status": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/transact/obtain_record/By_member_id/all": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "member_id",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/transact/obtain_record/By_member_id/pending": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "member_id",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/transact/obtain_record/By_member_id/processed": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "member_id",
+            "in": "query",
             "schema": {
               "type": "string"
             }
